# alglib

./: .gitignore  README.md
v315/: CMakeLists.txt
v315/install/linux/share/cmake/alglib/: alglib-config-debug.cmake  alglib-config-release.cmake
v315/install/mac/share/cmake/alglib/: alglib-config-debug.cmake  alglib-config-release.cmake  alglib-config.cmake
v315/tests/: CMakeLists.txt  test_x.cpp  test_xne.cpp  test_xpart0.cpp
